--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.15",
-    "@headlessui/react": "^1.7.17",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.7.1",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.4.0",
+    "@prisma/client": "^6.15.0",
+    "@stripe/react-stripe-js": "^3.9.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.85.6",
+    "@tanstack/react-query-devtools": "^5.85.6",
     "@tensorflow/tfjs": "^4.15.0",
     "@types/d3": "^7.4.3",
     "@types/papaparse": "^5.3.14",
@@ -29,25 +31,24 @@
     "bcryptjs": "^2.4.3",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
-
-    "lucide-react": "^0.294.0",
-    "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
+    "next": "^15.5.2",
+    "next-auth": "^5.0.0-beta.29",
     "papaparse": "^5.4.1",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^5.4.149",
     "plotly.js": "^2.27.1",
     "postcss": "^8.4.32",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
     "react-plotly.js": "^2.6.0",
-    "react-query": "^3.39.3",
     "recharts": "^2.8.0",
     "sqlite3": "^5.1.7",
-    "stripe": "^14.9.0",
+    "stripe": "^18.5.0",
     "tailwindcss": "^3.3.6",
     "tesseract.js": "^5.0.4",
     "zod": "^3.22.4"
@@ -56,12 +57,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.4",
     "@types/plotly.js": "^2.12.29",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/react-plotly.js": "^2.6.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
-    "prisma": "^5.7.1",
+    "prisma": "^6.15.0",
     "typescript": "^5.3.3"
   },
   "engines": {
